work on translations

--- a/MArchiveAngularWeb/index.html
+++ b/MArchiveAngularWeb/index.html
@@ -61,6 +61,8 @@
     <script src="bower_components/angular-gettext/dist/angular-gettext.min.js"></script>
     <!-- Load app main script -->
     <script src="app/app.js"></script>
+    <!-- Load translations script -->
+    <script src="app/translations.js"></script>
     <!-- Load services -->
     <script src="app/services/authInterceptorService.js"></script>
     <script src="app/services/authService.js"></script>
