small layout changes

--- a/MArchiveAngularWeb/index.html
+++ b/MArchiveAngularWeb/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <link href="css/bootstrap-cyborg.min.css" rel="stylesheet" />
     <link href="css/loading-bar.min.css" rel="stylesheet" />
+    <link href="css/social-buttons.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />-->
 	<meta charset="utf-8" />
@@ -15,7 +16,7 @@
                 <button class="btn btn-success navbar-toggle" ng-click="navbarExpanded = !navbarExpanded">
                     <span class="glyphicon glyphicon-chevron-down"></span>
                 </button>
-                <a class="navbar-brand" href="#/" translate="yes">Movie Archive</a>
+                <a class="navbar-brand" href="#/">Movie Archive</a>
             </div>
             <div class="collapse navbar-collapse" data-collapse="!navbarExpanded">
                 <ul class="nav navbar-nav navbar-right">
@@ -32,7 +33,7 @@
     <div class="jumbotron">
         <div class="container">
             <div class="page-header text-center">
-                <h1 translate="yes">Movie Archive</h1>
+                <h1>Movie Archive</h1>
             </div>
             <p translate="yes">This application helps you organize your watch lists, easily find details of a movie or find a movie based on your criteria to watch. Enjoy!</p>
         </div>
